# iron-thread

./: .env.example  CONTRIBUTING.md  README.md  main.py  render.yaml  requirements.txt
sdk/: README.md  pyproject.toml
sdk/iron-thread-js/: README.md  index.d.ts  index.js  package.json
sdk/iron_thread.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/ironthread/: __init__.py  client.py
