[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-thread"
version = "0.1.0"
description = "Ruthless middleware that stops broken AI outputs from reaching your database"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0"
]
keywords = ["ai", "validation", "agents", "middleware", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/eugene001dayne/iron-thread"
Documentation = "https://iron-thread-production.up.railway.app/docs"
Repository = "https://github.com/eugene001dayne/iron-thread"

[tool.setuptools.packages.find]
where = ["."]
include = ["ironthread*"]