[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iron-thread"
version = "0.3.0"
description = "Open-source middleware that validates AI outputs before they reach your database."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Eugene Dayne Mawuli", email = "bitelance.team@gmail.com"}
]
keywords = ["ai", "validation", "middleware", "agents", "llm", "thread-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = ["httpx>=0.23.0"]

[project.urls]
Homepage = "https://github.com/eugene001dayne/iron-thread"
Documentation = "https://iron-thread.onrender.com/docs"
Repository = "https://github.com/eugene001dayne/iron-thread"

[tool.setuptools.packages.find]
where = ["."]
include = ["ironthread*"]